--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -55,6 +55,11 @@ section {
     background-color: #f7a51d;
 }
 
+#interactive {
+    width: 100%;
+    height: 100%;
+}
+
 #details-page {
     background-color: white;
 }
