--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,24 +2,20 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    --primary: #000;
-    --secondary: #fff;
-    --red: #ea1f25;
-    --orange: #f7a51d;
+    --white: 255, 255, 255;
+    --blue-start: 1, 183, 255;
+    --blue-end: 6, 108, 255;
+    --light-blue: 91, 193, 255;
 }
 
 body {
     font-family: 'Open Sans', sans-serif;
     font-size: 1em;
-    color: var(--secondary);
+    color: rgb(var(--white));
 }
 
 a {
     text-decoration: none;
-}
-
-a, a:visited, a:hover, a:active {
-    color: inherit;
 }
 
 .invisible {
@@ -33,34 +29,133 @@ html, body, section {
 
 section {
     display: flex;
-    align-items: center;
     justify-content: center;
 }
 
 #home-page {
     font-size: 1em;
+    background-image: linear-gradient(to bottom, rgb(var(--blue-start)), rgb(var(--blue-end)));
+}
+
+.scan-button-container {
+    margin-top: 30%;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
 }
 
 .scan-button {
+    width: 5em;
+    height: 5em;
+    font-size: 2em;
+    background-color: rgb(var(--light-blue));
+    border-radius: 50%;
+    font-weight: 900;
+    background-image: url("../img/scan.png");
+    background-size: 70% 70%;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.ripple {
+    position: absolute;
     display: flex;
     align-items: center;
     justify-content: center;
     width: 5em;
-    height: 3em;
-    background-color: var(--red);
-    color: var(--secondary);
+    height: 5em;
+    z-index: -1;
+}
+
+.ripple:before, .ripple:after {
+    content: "";
+    animation: ripple;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    width: 5em;
+    height: 5em;
+    border: 3px solid rgb(var(--white));
+    display: block;
+    position: absolute;
+    border-radius: 50%;
+}
+
+.ripple:after {
+    animation-delay: 1s;
+}
+
+@keyframes ripple {
+    from {
+        opacity: 0.5;
+        transform: scale(1);
+    }
+
+    to {
+        opacity: 0;
+        transform: scale(3);
+    }
+}
+
+.waves-container {
+    width: 100%;
+    height: 200px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    overflow: hidden;
+}
+
+.wave {
+    position: absolute;
+    width: 1600px;
+    height: 200px;
+    animation: wave 7s cubic-bezier( 0.36, 0.45, 0.63, 0.53) infinite;
+    transform: translate3d(0, 0, 0) translateX(-50%);
+}
+
+.wave:nth-of-type(2) {
+    animation: wave 7s cubic-bezier( 0.36, 0.45, 0.63, 0.53) infinite;
+    transform: translate3d(0, 0, 0) translateX(50%);
+}
+
+.wave path {
+    fill: rgb(var(--light-blue));
+    opacity: 0.7;
+}
+
+.type-2 .wave {
+    transform: translateX(-60%);
+}
+
+.type-2 .wave:nth-of-type(2) {
+    transform: translateX(40%);
+}
+
+.type-2 .wave path {
+    fill: rgb(var(--light-blue));
+    opacity: 0.7;
+}
+
+@keyframes wave {
+    0% {
+        margin-left: 0;
+    }
+    100% {
+        margin-left: -1600px;
+    }
 }
 
 /* Scan page */
 #scan-page {
-    background-color: #f7a51d;
+    background-image: linear-gradient(to bottom, rgb(var(--blue-start)), rgb(var(--blue-end)));
 }
 
 #interactive.viewport {
     width: 640px;
     height: 480px;
 }
-
 
 #interactive.viewport canvas, video {
     float: left;
@@ -78,7 +173,6 @@ section {
     overflow: hidden;
 }
 
-
 #interactive.viewport canvas, video {
     margin-top: -50px;
     width: 300px;
@@ -89,6 +183,35 @@ section {
     margin-left: -300px;
 }
 
+.actions {
+    position: absolute;
+    bottom: 0;
+    padding: 10px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#flashlight {
+    background-image: url("../img/flashlight.svg");
+    width: 4em;
+    height: 4em;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 3em 3em;
+    border-radius: 50%;
+}
+
+.flashlight-off {
+    background-color: rgb(var(--light-blue));
+
+}
+
+.flashlight-on {
+    background-color: rgb(var(--blue-end));
+    filter: invert(100%);
+}
 
 /* Details page */
 #details-page {
