--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -152,35 +152,9 @@ section {
     background-image: linear-gradient(to bottom, rgb(var(--blue-start)), rgb(var(--blue-end)));
 }
 
-#interactive.viewport {
-    width: 640px;
-    height: 480px;
-}
-
-#interactive.viewport canvas, video {
-    float: left;
-    width: 640px;
-    height: 480px;
-}
-
-#interactive.viewport canvas.drawingBuffer, video.drawingBuffer {
-    margin-left: -640px;
-}
-
-#interactive.viewport {
-    width: 300px;
-    height: 300px;
-    overflow: hidden;
-}
-
-#interactive.viewport canvas, video {
-    margin-top: -50px;
-    width: 300px;
-    height: 400px;
-}
-
-#interactive.viewport canvas.drawingBuffer, video.drawingBuffer {
-    margin-left: -300px;
+#interactive {
+    height: 100%;
+    width: 100%;
 }
 
 .actions {
