--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -150,6 +150,7 @@ section {
 /* Scan page */
 #scan-page {
     background-color: black;
+    overflow: hidden;
 }
 
 #interactive {
@@ -157,10 +158,31 @@ section {
     width: 100%;
 }
 
+#interactive.viewport {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    border: 1px solid red;
+}
+
+#interactive.viewport canvas, video {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    border: 1px solid yellow;
+}
+
+#interactive.viewport canvas.drawingBuffer, video.drawingBuffer {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    border: 1px solid green;
+}
+
 .actions {
     position: absolute;
     bottom: 0;
-    padding: 10px;
+    padding: 15px;
     width: 100%;
     display: flex;
     align-items: center;
