--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -158,27 +158,6 @@ section {
     width: 100%;
 }
 
-#interactive.viewport {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    border: 1px solid red;
-}
-
-#interactive.viewport canvas, video {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    border: 1px solid yellow;
-}
-
-#interactive.viewport canvas.drawingBuffer, video.drawingBuffer {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    border: 1px solid green;
-}
-
 .actions {
     position: absolute;
     bottom: 0;
@@ -234,7 +213,7 @@ section {
 }
 
 #details-page-content {
-    padding: 1em;
+
 }
 
 #tracks {
@@ -242,7 +221,7 @@ section {
     grid-gap: 1em;
     align-items: center;
     justify-items: center;
-    grid-template-columns: repeat(auto-fill, minmax(10em, 1fr));
+    grid-template-columns: 1fr;
 }
 
 .album-title {
@@ -251,7 +230,6 @@ section {
     text-align: center;
     width: 100%;
     display: inline-block;
-    padding-bottom: 1em;
 }
 
 .track {
@@ -267,15 +245,14 @@ section {
 }
 
 .album span {
-    width: 100px;
+    width: 90%;
     background-color: rgb(var(--blue-end));
-    padding: 3px;
+    padding: 0.1em;
     pointer-events: none;
 }
 
 .album-image {
-    width: 100px;
-    height: 100px;
+    max-width: 90%;
     pointer-events: none;
 }
 
