--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,7 +9,7 @@
 }
 
 body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Open Sans', Verdana, sans-serif;
     font-size: 1em;
     color: rgb(var(--white));
 }
@@ -38,7 +38,7 @@ section {
 }
 
 .scan-button-container {
-    margin-top: 30%;
+    top: 20%;
     position: absolute;
     display: flex;
     align-items: center;
@@ -99,9 +99,8 @@ section {
 .waves-container {
     width: 100%;
     height: 200px;
-    position: fixed;
+    position: absolute;
     bottom: 0;
-    left: 0;
     overflow: hidden;
 }
 
